--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </main>
     <footer>
       <p>2024 - Flix Séries. Todos os direitos reservados</p>
-      <p>Entre em contato pelo email: gabriela@flixseries.com</p>
+      <p>Entre em contato pelo email: gabrielarabello25@gmail.com</p>
     </footer>
     <script src="dados.js"></script>
     <script src="meuScript.js"></script>
