--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 
   <body>
     <header>
-      <h1>GAME OVER </h1>
+      <h1>OLD GAMES </h1>
     </header>
     <main>
       <section>
-        <input type="text" placeholder="Digite o nome de uma série "  id="campo-pesquisa" >
-        <button  onclick="pesquisar()" >Pesquisar</button>
+        <input type="text" placeholder="Digite o nome de um jogo "  id="campo-pesquisa" >
+        <button  onclick="pesquisar()" >Press Start</button>
       </section>
       <section class="resultados-pesquisa" id="resultados-pesquisa">
       </section>
     </main>
     <footer>
-      <p>2024 - Flix Séries. Todos os direitos reservados</p>
+      <p>2024 - Old Games. Todos os direitos reservados</p>
       <p>Entre em contato pelo email: gabrielarabello25@gmail.com</p>
     </footer>
     <script src="dados.js"></script>
