--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       </section>
     </main>
     <footer>
-      <p>2024 - Old Games. Todos os direitos reservados</p>
-      <p>Entre em contato pelo email: gabrielarabello25@gmail.com</p>
+      <p> &copy; 2014 - OLD GAMES.  Todos os direitos reservados. <br> &#9733; Desenvolvido por Gabriela Rabelo</p> 
     </footer>
     <script src="dados.js"></script>
     <script src="meuScript.js"></script>
