--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 
   <body>
     <header>
-      <h1>OLD GAMES </h1>
+      <h1>OLD  GAMES  </h1>
     </header>
     <main>
       <section>
         <input type="text" placeholder="Digite o nome de um jogo "  id="campo-pesquisa" >
-        <button  onclick="pesquisar()" >Press Start</button>
+        <button  onclick="pesquisar()" > press start</button>
       </section>
       <section class="resultados-pesquisa" id="resultados-pesquisa">
       </section>
     </main>
     <footer>
-      <p> &copy; 2014 - OLD GAMES.  Todos os direitos reservados. <br> &#9733; Desenvolvido por Gabriela Rabelo</p> 
+      <p> &copy; 2024 - OLD GAMES. Todos os direitos reservados.</p>
+      <p>Desenvolvido por Gabriela Rabelo</p>
     </footer>
     <script src="dados.js"></script>
     <script src="meuScript.js"></script>
